--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/reset.css">
-    <title>React App</title>
+   
+    <title>Jogo da Forca</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
